# MyEasyEncrypt

./: .gitignore  CMakeLists.txt  README.md
include/: aes.h
src/: aes.cpp
test/: CMakeLists.txt
test/src/: aes_test.cpp
